--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,6 +3,11 @@
   font-size: 22px;
 }
 
+.todo-details-avatar {
+  width: 50px;
+  height: 50px;
+}
+
 .todo-details-description {
   margin-top: 0;
 }
